--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,40 @@
-.App {
-  text-align: center;
-}
-h2 {
-  color: #f08080;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
+*{
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+}
+
+body{
+  background-color: #4b4b4b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container{
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  margin: 0 auto;
+  width: 256px;
+  text-align: center;
+  border: 10px solid #303030;
+  background: #303030;
+  border-radius: 10px;
+}
+
+.keypad{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr) ;
+  grid-auto-rows: minmax(60px,auto) ;
+}
+
+input[type= "text"]{
+  height: 75px;
+  width: 248px;
+  background: #3d3d3d;
+  border:0px;
+  color: beige;
 }
