--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ body{
   border: 10px solid #303030;
   background: #303030;
   border-radius: 10px;
+  box-shadow: black 30px ;
 }
 
 .keypad{
@@ -32,9 +33,37 @@ body{
 }
 
 input[type= "text"]{
-  height: 75px;
-  width: 248px;
+  width: 239px;
+  height: 100px;
   background: #3d3d3d;
   border:0px;
   color: beige;
+  text-align: right;
+  font-size: 25px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  border-radius: 10px;
+  margin: 6px 0px 6px;
+}
+#operador{
+  background-color:#654ABB;
+  color: beige;
+}
+
+#clear{
+  grid-column: 1/3;
+  grid-row: 1;
+
+}
+#result{
+  grid-column: 3/5;
+  grid-row: 5;
+  border: ;
+  color: beige;
+  background-color:#FFC301;
+}
+button{
+  margin: 5px;
+  border: none;
+  border-radius: 10px;
 }
